--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,16 +1,24 @@
-<h2>Sign Up</h2>
+<div class="background">
+  <h2 class ="header">Sign Up And Begin Annotating!</h2>
 
-<form action="<%= users_url %>" method="post">
-  <%= auth_token_input %>
-  <label>
-    Username
-    <input type="text" name="user[username]" value="">
-  </label>
+  <form action="<%= users_url %>" method="post">
+    <%= auth_token_input %>
+    <div class="login_border">
+    <label class="username">
+      Username
+      <input class="user_input" type="text" name="user[username]" value="">
+    </label>
 
-  <label>
-    Password
-    <input type="password" name="user[password]" value="">
-  </label>
+    <label class="password">
+      Password
+      <input class="password_input" type="password" name="user[password]" value="">
+    </label>
+      <input class="submit" type="submit" value="Sign Up">
+      <p class="text">
+        Already have an Account? You Can Sign In <span class ="link"><%= link_to "Here", new_session_url %></span>
+      </p>
+    </div>
 
-  <input type="submit" value="Sign Up">
-</form>
+  </form>
+
+</div>
