--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
 <div class="background">
-  <h2 class ="header">Sign Up And Begin Annotating!</h2>
+  <h2 class ="header">
+    <img src="../../../assets/images/MusicGenius-logo.png">
+    Sign Up And Begin Annotating!
+  </h2>
 
   <form action="<%= users_url %>" method="post">
     <%= auth_token_input %>
