--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="background">
   <h2 class ="header">
-    <img src="../../../assets/images/MusicGenius-logo.png">
-    Sign Up And Begin Annotating!
+    <a class="logo" href="<%= root_url  %>"><img src="../../../assets/MusicGenius-logo.png" /></a>
+    <div class="headerWords"> Sign Up And Begin Annotating!</div>
   </h2>
 
   <form action="<%= users_url %>" method="post">
