--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,17 +1,11 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/.na
-
-.nav{
-  list-style-type: none;
-  margin: 0 auto;
-  padding: 0;
-  width: 70%;
-  background-color: #9999cc;
+.no{
+  display: none;
 }
 
-.nav > li {
-  display: inline-block;
-  width: 14%;
-  text-align: center;
+.error{
+  display: inline;
+  color: red;
 }
