--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -9,3 +9,199 @@
   display: inline;
   color: red;
 }
+
+.form-box{
+  display: block;
+  width: 800px;
+  height: 1000px;
+  background-color: #67758A;
+  margin: 0 auto;
+  border: 2px solid #b399cc;
+}
+
+.form-header{
+  text-shadow: 1px 1px black;
+  text-align: center;
+  font-family: 'Indie Flower', cursive;
+  color: white;
+  font-size: 24px;
+  margin-top: 0;
+  border-bottom: 2px solid #b399cc;
+}
+
+.artist-name-label{
+  display: block;
+    height: 80px;
+    text-align: center;
+    padding-top: 80px;
+    font-family: 'Indie Flower', cursive;
+    font-size: 24px;
+    color: white;
+    text-shadow: 1px 1px black;
+}
+
+.artist-name-input{
+  display: block;
+  margin: 0 auto;
+  border: 1px inset;
+  border-color: #b399cc;
+  width: 150px;
+  height: 15px;
+}
+
+.artist-description-label{
+  display: block;
+  height: 150px;
+  text-align: center;
+  padding-top: 0px;
+  font-family: 'Indie Flower', cursive;
+  font-size: 24px;
+  color: white;
+  text-shadow: 1px 1px black;
+}
+
+.artist-description-input{
+  display: block;
+  margin: 0 auto;
+  border: 1px inset;
+  border-color: #b399cc;
+  width: 150px;
+  height: 100px;
+  resize: none;
+  font-family: serif;
+  font-size: 14px;
+  transition: width 2s, height 2s
+}
+.artist-description-input:focus{
+  width: 300px;
+  height: 300px;
+}
+input:focus, textarea:focus{
+  outline-color: #ea00b7;
+}
+
+
+.song-label{
+  display: block;
+    height: 80px;
+    text-align: center;
+    font-family: 'Indie Flower', cursive;
+    font-size: 24px;
+    color: white;
+    text-shadow: 1px 1px black;
+}
+.song-input{
+  display: block;
+  margin: 0 auto;
+  border: 1px inset;
+  border-color: #b399cc;
+  width: 150px;
+  height: 15px;
+}
+
+.album-label{
+  display: block;
+    height: 80px;
+    text-align: center;
+    font-family: 'Indie Flower', cursive;
+    font-size: 24px;
+    color: white;
+    text-shadow: 1px 1px black;
+}
+.album-input{
+  display: block;
+  margin: 0 auto;
+  border: 1px inset;
+  border-color: #b399cc;
+  width: 150px;
+  height: 15px;
+}
+
+.lyrics-label{
+  display: block;
+    height: 500px;
+    text-align: center;
+    font-family: 'Indie Flower', cursive;
+    font-size: 24px;
+    color: white;
+    text-shadow: 1px 1px black;
+}
+
+.lyrics-input{
+  display: block;
+  margin: 0 auto;
+  border: 1px inset;
+  border-color: #b399cc;
+  width: 150px;
+  height: 100px;
+  resize: none;
+  font-family: serif;
+  font-size: 14px;
+  transition: width 2s, height 2s;
+}
+
+.lyrics-input:focus{
+  width: 450px;
+  height: 450px;
+}
+
+input[type="submit"]{
+  display: block;
+  vertical-align: middle;
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  transition-duration: 0.3s;
+  transition-property: transform;
+  border: none;
+  border: 2px solid #b399cc;
+  margin: 20px auto;
+  font-size: 24px;
+  color: #cccc99;
+  background-color: #9999cc;
+  width: 200px;
+  font-family: monospace;
+}
+
+input[type="submit"]:hover,
+input[type="submit"]:focus,
+input[type="submit"]:active{
+  transform: scale(1.5);
+  cursor: pointer;
+}
+
+.song-list {
+  border-right: 2px solid #b399cc;
+  list-style: none;
+  display: block;
+  width: 400px;
+  height: 100%;
+  text-align: center;
+  font-size: 24px;
+  margin: 0;
+  padding-left: 0;
+}
+.individual-song {
+  border-bottom: 2px solid #b399cc;
+  padding: 10px;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transform-origin: 0 100%;
+  transform-origin: 0 100%;
+}
+
+.individual-song:hover {
+  -webkit-transform: skew(10deg);
+ transform: skew(10deg);
+
+}
