--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
     <%= link_to "Add Artist", "#{root_url}#/artists/new" %>
     </li>
     <li>
-      <a>Add Song</a>
+    <%= link_to "Add Song", "#{root_url}#/songs/new" %>
     </li>
     <li>
       <input type="search" placeholder="search music" class="search-bar" />
