--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -176,7 +176,7 @@ input[type="submit"]:active{
   list-style: none;
   display: block;
   width: 400px;
-  height: 100%;
+  height: 894px;
   text-align: center;
   font-size: 24px;
   margin: 0;
@@ -201,7 +201,87 @@ input[type="submit"]:active{
 }
 
 .individual-song:hover {
+  cursor: pointer;
   -webkit-transform: skew(10deg);
  transform: skew(10deg);
 
+}
+
+.welcome {
+  display: block;
+  text-align: center;
+  font-family: 'Indie Flower', cursive;
+  font-size: 32px;
+  color: white;
+  border-bottom: 4px solid #b399cc;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.recently-added-header{
+  display: block;
+  width: 400px;
+  border-right: 2px solid #b399cc;
+  border-bottom: 2px solid #b399cc;
+  font-size: 28px;
+  color: white;
+  text-align: center;
+  font-family: 'Indie Flower', cursive;
+  padding-bottom: 4px;
+  padding-top: 4px;
+}
+
+.song-header{
+  display: inline-block;
+  width: 600px;
+  border-right: 2px solid #b399cc;
+  border-bottom: 2px solid #b399cc;
+  font-size: 28px;
+  color: white;
+  text-align: center;
+  padding-bottom: 4px;
+  padding-top: 4px;
+}
+
+.song-lyrics{
+  white-space: pre-wrap;
+  display: inline-block;
+  padding-top: 20px;
+  padding-left: 50px;
+  width: 550px;
+  min-height: 961px;
+  border-right: 2px solid #b399cc;
+  color: white;
+  font-size: 20px;
+}
+.lyrics-box{
+
+  display: block;
+  width: 1200px;
+  min-height: 1000px;
+  background-color: #67758A;
+  margin: 0 auto;
+  border: 2px solid #b399cc;
+}
+
+.about-the-artist{
+  display: inline-block;
+  width: 598px;
+  border-bottom: 2px solid #b399cc;
+  font-size: 28px;
+  color: white;
+  text-align: center;
+  padding-bottom: 4px;
+  padding-top: 4px;
+}
+
+.artist-description{
+  white-space: pre-wrap;
+  float: right;
+  padding-top: 20px;
+  text-align: center;
+  width: 598px;
+  min-height: 961px;
+  color: white;
+  font-size: 20px;
 }
