--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>KevinDolchCapstone</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </head>
@@ -13,17 +13,17 @@
 <body class="background">
   <ul class="nav">
     <li class="nav-logo">
-      <a href="<%="#{root_url}#/"%>" ><img src="../assets/MusicGenius-logo"/></a>
+      <a href="<%="#{root_url}"%>" ><img src="../assets/MusicGenius-logo"/></a>
     </li>
     <li>
       <% unless signed_in? %>
-      <a href="<%=new_user_url%>"> Create Account </a>
+      <%= link_to "Create Account", new_user_url%>
       <% end %>
     </li>
 
     <li>
       <% unless signed_in? %>
-      <a href="<%=new_session_url%>"> Log In </a>
+      <%= link_to "Log In", new_session_url  %>
       <% else %>
       <%= link_to "Log Out", session_url, method: :delete %>
       <% end %>
@@ -38,11 +38,11 @@
       <input type="search" placeholder="search music" class="search-bar" />
     </li>
   </ul>
+  <%=  flash[:errors] %>
 
 
 
 <%= yield %>
-<div id="content">
-</div>
+
 </body>
 </html>
