--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,21 +14,29 @@
  *= require_self
  */
 .background{
-  background-color: #9999cc;
+  background-color: #edf0f5;
 }
  .nav{
+   z-index: 9999999999;
+   position: fixed;
+   top: 0px;
+   left: 0px;
+   display: block;
    list-style-type: none;
    margin: 0 auto;
-   padding: 0;
-   width: 800px;
+   padding-left:33%;
+   width: 100%;
    height: 61px;
-   background-color: #9999cc;
-   border-left: 2px solid #b399cc;
-   border-right: 2px solid #b399cc;
-   border-bottom: 2px solid #b399cc;
+   background-color: #6441a5;
+   border-left: 1px solid  #483d8b;
+   border-right: 1px solid  #483d8b;
+   border-bottom: 1px solid  #483d8b;
+   box-shadow: 5px 5px 5px 0px #947DC4;
  }
-
  .nav-logo{
+   padding-left: 5px;
+   padding-right: 5px;
+   border-left: 1px solid #483d8b;
    float: left;
  }
  .nav > li:not(.nav-logo){
@@ -37,7 +45,7 @@
    height: 41px;
    padding-top: 20px;
    margin: auto auto;
-   border-left: 2px solid #b399cc;
+   border-left: 1px solid  #483d8b;
  }
 
  .nav > li:not(.nav-logo) > a {
@@ -47,10 +55,15 @@
 
  .page {
    display: block;
-   background-color: #9999cc;
+   background-color: #edf0f5;
+   z-index: -1;
    height:100%;
  }
  .search-bar {
-   width: 126px;
+   width: 150px;
    margin: auto auto;
  }
+
+.last-item {
+  border-right: 1px solid #483d8b;
+}
