--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -11,22 +11,45 @@
 }
 
 .form-box{
+  position: relative;
+  overflow: hidden;
   display: block;
-  width: 800px;
-  height: 1000px;
-  background-color: #67758A;
-  margin: 0 auto;
-  border: 2px solid #b399cc;
+  width: 33%;
+  min-height: 600px;
+  background-color: #e6e8fa;
+  margin: 50px auto;
+  box-shadow: 5px 16px 8px -5px #c7c5e6;
+}
+
+.form-box:before, .lyrics-box:before{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-width: 0 16px 16px 0;
+ border-style: solid;
+ border-color: #828be5 #edf0f5;
+ -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
+ -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
+ box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
 }
 
 .form-header{
-  text-shadow: 1px 1px black;
-  text-align: center;
-  font-family: 'Indie Flower', cursive;
+  padding-top: 10px;
   color: white;
+  text-shadow: 2px 2px 1px black;
+  text-align: center;
   font-size: 24px;
-  margin-top: 0;
-  border-bottom: 2px solid #b399cc;
+  background-color: #4b307b;
+  display: block;
+  height: 40px;
+  width: 25%;
+  margin: 0 auto;
+  margin-top: 80px;
+  border: 2px solid #483d8b;
+  border-left: 2px solid #483d8b;
+  border-right: 2px solid #483d8b;
+  box-shadow: 5px 5px 5px 0px #947DC4;
 }
 
 .artist-name-label{
@@ -36,7 +59,7 @@
     padding-top: 80px;
     font-family: 'Indie Flower', cursive;
     font-size: 24px;
-    color: white;
+    color: black;
     text-shadow: 1px 1px black;
 }
 
@@ -44,7 +67,7 @@
   display: block;
   margin: 0 auto;
   border: 1px inset;
-  border-color: #b399cc;
+  border-color: #483d8b;
   width: 150px;
   height: 15px;
 }
@@ -56,7 +79,7 @@
   padding-top: 0px;
   font-family: 'Indie Flower', cursive;
   font-size: 24px;
-  color: white;
+  color: black;
   text-shadow: 1px 1px black;
 }
 
@@ -64,7 +87,7 @@
   display: block;
   margin: 0 auto;
   border: 1px inset;
-  border-color: #b399cc;
+  border-color: #483d8b;
   width: 150px;
   height: 100px;
   resize: none;
@@ -77,7 +100,7 @@
   height: 300px;
 }
 input:focus, textarea:focus{
-  outline-color: #ea00b7;
+  outline-color: #6441a5;
 }
 
 
@@ -87,7 +110,7 @@ input:focus, textarea:focus{
     text-align: center;
     font-family: 'Indie Flower', cursive;
     font-size: 24px;
-    color: white;
+    color: black;
     text-shadow: 1px 1px black;
 }
 .song-input{
@@ -105,7 +128,7 @@ input:focus, textarea:focus{
     text-align: center;
     font-family: 'Indie Flower', cursive;
     font-size: 24px;
-    color: white;
+    color: black;
     text-shadow: 1px 1px black;
 }
 .album-input{
@@ -123,7 +146,7 @@ input:focus, textarea:focus{
     text-align: center;
     font-family: 'Indie Flower', cursive;
     font-size: 24px;
-    color: white;
+    color: black;
     text-shadow: 1px 1px black;
 }
 
@@ -146,44 +169,47 @@ input:focus, textarea:focus{
 }
 
 input[type="submit"]{
+  z-index: -1;
   display: block;
   vertical-align: middle;
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  box-shadow: 5px 5px 5px #947DC4;
   backface-visibility: hidden;
   -moz-osx-font-smoothing: grayscale;
   transition-duration: 0.3s;
   transition-property: transform;
+  transition: all 0.3s ease 0s;
   border: none;
-  border: 2px solid #b399cc;
   margin: 20px auto;
-  font-size: 24px;
-  color: #cccc99;
-  background-color: #9999cc;
+  font-size: 22px;
+  color: white;
+  background-color: #6441a5;
   width: 200px;
   font-family: monospace;
 }
 
+input[type="submit"]:active,
 input[type="submit"]:hover,
-input[type="submit"]:focus,
-input[type="submit"]:active{
-  transform: scale(1.5);
+input[type="submit"]:focus{
+  z-index: -1;
+  transform: scale(1.1);
   cursor: pointer;
+  background-color: #815fc0;
 }
 
 .song-list {
-  border-right: 2px solid #b399cc;
+  border: 1px solid #483d8b;
   list-style: none;
   display: block;
-  width: 400px;
-  height: 894px;
+  width: 50%;
+  min-height: 100px;
   text-align: center;
-  font-size: 24px;
+  font-size: 16px;
   margin: 0;
   padding-left: 0;
+  background-color: #4b307b;
 }
 .individual-song {
-  border-bottom: 2px solid #b399cc;
+  border-bottom: 1px solid #483d8b;
   padding: 10px;
   vertical-align: middle;
   -webkit-transform: translateZ(0);
@@ -208,21 +234,33 @@ input[type="submit"]:active{
 }
 
 .welcome {
-  display: block;
-  text-align: center;
-  font-family: 'Indie Flower', cursive;
-  font-size: 32px;
+  padding-top: 10px;
   color: white;
-  border-bottom: 4px solid #b399cc;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  text-shadow: 2px 2px 1px black;
+  text-align: center;
+  font-size: 24px;
+  background-color: #4b307b;
+  display: block;
+  height: 50px;
+  width: 25%;
+  margin: 0 auto;
+  margin-top: 80px;
+  border: 2px solid #483d8b;
+  border-left: 2px solid #483d8b;
+  border-right: 2px solid #483d8b;
+  box-shadow: 5px 5px 5px 0px #947DC4;
+
 }
 
 .recently-added-header{
+
+  background-color: #815fc0;
   display: block;
-  width: 400px;
-  border-right: 2px solid #b399cc;
-  border-bottom: 2px solid #b399cc;
+  width: 50%;
+  border-right: 2px solid #483d8b;
+  border-top: 2px solid #483d8b;
+  border-left: 2px solid #483d8b;
+  border-bottom: 1px solid #483d8b;
   font-size: 28px;
   color: white;
   text-align: center;
@@ -233,14 +271,14 @@ input[type="submit"]:active{
 
 .song-header{
   display: inline-block;
-  width: 600px;
-  border-right: 2px solid #b399cc;
-  border-bottom: 2px solid #b399cc;
+  width: 47%;
+  border: 2px solid #483d8b;
   font-size: 28px;
   color: white;
   text-align: center;
   padding-bottom: 4px;
   padding-top: 4px;
+  background-color: #815fc0;
 }
 
 .song-lyrics{
@@ -248,31 +286,34 @@ input[type="submit"]:active{
   display: inline-block;
   padding-top: 20px;
   padding-left: 50px;
-  width: 550px;
-  min-height: 961px;
-  border-right: 2px solid #b399cc;
-  color: white;
-  font-size: 20px;
+  width: 47%;
+  min-height: 100px;
+  color: black;
+  font-size: 16px;
 }
 .lyrics-box{
-
+  position: relative;
+  overflow: hidden;
   display: block;
-  width: 1200px;
-  min-height: 1000px;
-  background-color: #67758A;
-  margin: 0 auto;
-  border: 2px solid #b399cc;
+  width: 70%;
+  min-height: 100px;
+  background-color: #e6e8fa;
+  margin: 100px auto;
+  padding: 30px;
+  box-shadow: 5px 16px 8px -5px #c7c5e6;
 }
 
 .about-the-artist{
+  float: right;
   display: inline-block;
-  width: 598px;
-  border-bottom: 2px solid #b399cc;
+  width: 47%;
+  border: 2px solid #483d8b;
   font-size: 28px;
   color: white;
   text-align: center;
   padding-bottom: 4px;
   padding-top: 4px;
+  background-color: #815fc0;
 }
 
 .artist-description{
@@ -280,8 +321,58 @@ input[type="submit"]:active{
   float: right;
   padding-top: 20px;
   text-align: center;
-  width: 598px;
-  min-height: 961px;
+  width: 47%;
+  min-height: 100px;
   color: white;
-  font-size: 20px;
+  font-size: 16px;
+}
+
+.song-box{
+  position: relative;
+  overflow: hidden;
+  display: block;
+  width: 33%;
+  min-height: 900px;
+  background-color: #e6e8fa;
+  margin: 50px auto;
+  box-shadow: 5px 16px 8px -5px #c7c5e6;
+}
+
+
+.song-box:before{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-width: 0 16px 16px 0;
+ border-style: solid;
+ border-color: #828be5 #edf0f5;
+ -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
+ -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
+ box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
+}
+
+.splash-box{
+  padding: 30px;
+  position: relative;
+  overflow: hidden;
+  display: block;
+  width: 40%;
+  min-height: 50px;
+  background-color: #e6e8fa;
+  margin: 50px auto;
+  box-shadow: 5px 16px 8px -5px #c7c5e6;
+}
+
+.splash-box:before{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-width: 0 16px 16px 0;
+ border-style: solid;
+ border-color: #828be5 #edf0f5;
+ -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
+ -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
+ box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
 }
