--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,8 @@
-<div class="background">
-  <h2 class ="header">
-    
+<div class="page-background">
+  <div class ="header">
+
     <div class="headerWords"> Sign Up And Begin Annotating!</div>
-  </h2>
+  </div>
 
   <form action="<%= users_url %>" method="post">
     <%= auth_token_input %>
