started working on Artist edit component

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -335,12 +335,11 @@ input[type="submit"]:focus,
 
 .artist-description{
   white-space: pre-wrap;
-  float: right;
+  float: left;
   padding-top: 20px;
-  text-align: center;
-  width: 47%;
+  width: 100%;
   min-height: 100px;
-  color: white;
+  color: black;
   font-size: 16px;
 }
 
@@ -600,4 +599,8 @@ input[type="submit"]:focus,
   margin-right: 15%;
   padding: 30px;
   box-shadow: 5px 16px 8px -5px #c7c5e6;
+}
+
+.break{
+  display: block;
 }
