--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -21,7 +21,7 @@
   box-shadow: 5px 16px 8px -5px #c7c5e6;
 }
 
-.form-box:before, .lyrics-box:before, .about-the-artist-box:before, .annotations-form-box:after{
+.form-box:before, .lyrics-box:before, .about-the-artist-box:before, .annotations-form-box:before{
   content: "";
   position: absolute;
   top: 0;
@@ -225,6 +225,7 @@ input[type="submit"]:focus,
   transition-property: transform;
   -webkit-transform-origin: 0 100%;
   transform-origin: 0 100%;
+  transition: all 0.3s;
 }
 
 .individual-song:hover {
@@ -295,13 +296,14 @@ input[type="submit"]:focus,
 }
 .lyrics-box{
   position: relative;
-  overflow: hidden;
   display: inline-block;
   width: 30%;
   min-height: 100px;
+  min-width: 450px;
   background-color: #e6e8fa;
   margin-top: 100px;
   margin-left: 15%;
+  margin-bottom: 100px;
   padding: 30px;
   box-shadow: 5px 16px 8px -5px #c7c5e6;
 }
@@ -316,6 +318,7 @@ input[type="submit"]:focus,
   background-color: #e6e8fa;
   margin-top: 100px;
   margin-right: 15%;
+  margin-bottom: 100px;
   padding: 30px;
   box-shadow: 5px 16px 8px -5px #c7c5e6;
 }
@@ -400,15 +403,17 @@ input[type="submit"]:focus,
 }
 
 .button-on{
+  z-index: 2;
   position: relative;
   top: -10px;
-  margin-right: 10%;
   float: right;
+  left: 5%;
   width: 120px;
   height: 40px;
   background-color: #4b307b;
   color: white;
   border: none;
+  box-shadow: 5px 5px 5px #c7c5e6;
   border-radius: 10px;
   transition: all 0.3s;
 }
@@ -603,4 +608,23 @@ input[type="submit"]:focus,
 
 .break{
   display: block;
+}
+
+.edit{
+  display: block;
+  background-color: #ffffc4;
+  margin: 0 auto;
+  margin-top: 10%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border-style: none;
+  border: 1px solid #ededd6;
+  transition: all 0.5s;
+}
+
+.edit:hover{
+  cursor: pointer;
+  border-radius: 0;
+  width: 100px;
 }
