--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -21,7 +21,7 @@
   box-shadow: 5px 16px 8px -5px #c7c5e6;
 }
 
-.form-box:before, .lyrics-box:before, .about-the-artist-box:before, .annotations-form-box:before{
+.form-box:before, .lyrics-box:before, .about-the-artist-box:before, .annotations-form-box:before, .edit-artist-box:before{
   content: "";
   position: absolute;
   top: 0;
@@ -308,7 +308,7 @@ input[type="submit"]:focus,
   box-shadow: 5px 16px 8px -5px #c7c5e6;
 }
 
-.about-the-artist-box{
+.about-the-artist-box, .edit-artist-box{
   float: right;
   position: relative;
   overflow: hidden;
@@ -323,7 +323,7 @@ input[type="submit"]:focus,
   box-shadow: 5px 16px 8px -5px #c7c5e6;
 }
 
-.about-the-artist{
+.about-the-artist, .edit-header{
   display: block;
   width: 100%;
   border: 2px solid #483d8b;
@@ -612,9 +612,10 @@ input[type="submit"]:focus,
 
 .edit{
   display: block;
+  position: relative;
   background-color: #ffffc4;
   margin: 0 auto;
-  margin-top: 10%;
+  top: 120px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -626,5 +627,49 @@ input[type="submit"]:focus,
 .edit:hover{
   cursor: pointer;
   border-radius: 0;
-  width: 100px;
+  width: 80px;
+}
+
+.edit-artist{
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+  width: 250px;
+  height: 300px;
+  resize: none;
+  font-size: 14px;
+  font-family: serif;
+}
+
+.search-box{
+  height: 50px;
+  width: 30%;
+  margin: 2% auto;
+  text-align: center;
+
+}
+
+.search-bar{
+  display: block;
+  height: 100%;
+  width: 100%;
+  background-color: #815fc0;
+  border: none;
+  margin: 0 auto;
+  border-radius: 0 50% 0 50%;
+  color: white;
+  font-size: 16px;
+  text-align: center;
+}
+
+.search-bar:focus{
+  outline: none;
+  border: 2px outset #9ec05f;
+}
+
+input::-webkit-input-placeholder {
+  color: white;
+}
+input[type="search"]::-webkit-search-cancel-button, {
+  display: none;
 }
