--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <ul class="nav">
     <span class="main-nav">
     <li class="nav-logo">
-      <a href="<%="#{root_url}"%>" ><img src="../assets/MusicGenius-logo"/></a>
+      <a href="<%="#{root_url}"%>" ><img src="/assets/MusicGenius-logo.png"/></a>
     </li>
     <% if signed_in? %>
       <% stuff = "yup" %>
