--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,24 +16,32 @@
 .background{
   background-color: #edf0f5;
 }
+
+.full-nav{
+  z-index: 9999999999;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: block;
+  list-style-type: none;
+  margin: 0 auto;
+  width: 100%;
+  min-width: 1000px;
+  height: 61px;
+  background-color: #6441a5;
+  border-left: 1px solid  #483d8b;
+  border-right: 1px solid  #483d8b;
+  border-bottom: 1px solid  #483d8b;
+  box-shadow: 0px 5px 5px 0px #947DC4;
+}
  .nav{
-   z-index: 9999999999;
-   position: fixed;
-   top: 0px;
-   left: 0px;
    display: block;
+   height: 61px;
+   min-width: 1000px;
    list-style-type: none;
    margin: 0 auto;
-   width: 100%;
-   min-width: 1000px;
-   height: 61px;
-   padding-left: 30%;
-   padding-right: 30%;
    background-color: #6441a5;
-   border-left: 1px solid  #483d8b;
-   border-right: 1px solid  #483d8b;
-   border-bottom: 1px solid  #483d8b;
-   box-shadow: 0px 5px 5px 0px #947DC4;
+   padding-left: 33%;
  }
  .nav-logo{
    padding-left: 5px;
