--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 
 
 <body class="background">
+  <div class="full-nav">
   <ul class="nav">
     <span class="main-nav">
     <li class="nav-logo">
@@ -45,6 +46,7 @@
     </li>
   </span>
   </ul>
+</div>
   <%=  flash[:errors] %>
 
 
