--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -11,6 +11,7 @@
   display: block;
   height: 50px;
   width: 25%;
+  min-width: 345px;
   margin: 0 auto;
   margin-top: 80px;
   border: 2px solid #483d8b;
@@ -26,6 +27,7 @@
   position: relative;
   overflow: hidden;
   width: 25%;
+  min-width: 400px;
   min-height: 100px;
   display: block;
   margin: 50px auto;
