--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -250,7 +250,7 @@ input[type="submit"]:focus,
   font-size: 24px;
   background-color: #4b307b;
   display: block;
-  height: 100px;
+  height: 50px;
   width: 25%;
   min-width: 272px;
   margin: 0 auto;
@@ -260,6 +260,35 @@ input[type="submit"]:focus,
   border-right: 2px solid #483d8b;
   box-shadow: 5px 5px 5px 0px #947DC4;
 
+}
+
+.explanation-box{
+  height: 100px;
+  width: 25%;
+  min-width: 272px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 2px solid #483d8b;
+  border-left: 2px solid #483d8b;
+  border-right: 2px solid #483d8b;
+  box-shadow: 5px 5px 5px 0px #947DC4;
+
+}
+
+.annotate-the-world{
+  display: block;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+}
+
+.explanation{
+  display: block;
+  color: white;
+  text-align: center;
+  font-size: 14px;
+  padding-top: 10px;
 }
 
 .recently-added-header, .recently-annotated-header{
