--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,7 @@
  *= require_self
  */
 .background{
-  background-color: #edf0f5;
+  background-image:url("assets/sparkling-snow-texture.jpg");
 }
 
 .full-nav{
