--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -29,7 +29,7 @@
   right: 0;
   border-width: 0 16px 16px 0;
  border-style: solid;
- border-color: #828be5 #edf0f5;
+ border-color: #828be5 none;
  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
  -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
  box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
@@ -244,12 +244,12 @@ input[type="submit"]:focus,
 
 .welcome {
   font-family: 'Inconsolata';
+  background-image: image('images.jpeg');
   padding-top: 10px;
   color: white;
   text-shadow: 2px 2px 1px black;
   text-align: center;
   font-size: 24px;
-  background-color: #4b307b;
   display: block;
   height: 50px;
   width: 25%;
